--- a/html/search-parts.html
+++ b/html/search-parts.html
@@ -30,6 +30,7 @@
             
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="../utils/mousetrap.min.js"></script>
     <script src="../js/search-renderer.js"></script>
 </body>
 
