--- a/html/generate-bill.html
+++ b/html/generate-bill.html
@@ -18,6 +18,21 @@
             <button class="btn waves-effect waves-light" id="print-invoice-btn">Print
                 <i class="material-icons right">print</i>
             </button>
+            <table class="striped">
+                <thead>
+                  <tr>
+                      <th>Material</th>
+                      <th>HSN Code</th>
+                      <th>Qty</th>
+                      <th>MRP</th>
+                      <th>Total</th>
+                  </tr>
+                </thead>
+        
+                <tbody id="invoice-table-body">
+                  
+                </tbody>
+              </table>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
             <script src="../js/generate-bill.js"></script>
 </body>
