--- a/html/generate-bill.html
+++ b/html/generate-bill.html
@@ -18,7 +18,7 @@
             <button class="btn waves-effect waves-light" id="print-invoice-btn">Print
                 <i class="material-icons right">print</i>
             </button>
-            <table class="striped">
+            <table class="striped" id="main-invoice-content">
                 <thead>
                   <tr>
                       <th>Material</th>
@@ -33,8 +33,10 @@
                   
                 </tbody>
               </table>
+            <script src="js/jsPDF/dist/jspdf.min.js"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
             <script src="../js/generate-bill.js"></script>
+            
 </body>
 
 </html>
