sending data to generate bill window

--- a/html/generate-bill.html
+++ b/html/generate-bill.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="Content-Security-Policy" content="default-src * 'unsafe-inline'" />
     <meta http-equiv="X-Content-Security-Policy" content="default-src * 'unsafe-inline'" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
+    <link rel="stylesheet" href="../assets/materialize/css/materialize.min.css" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-    <link rel="stylesheet" href="../styles/read-file.css" />
+    <link rel="stylesheet" href="../styles/main.css" />
     <title>Generate Bill</title>
 </head>
 
@@ -33,8 +33,8 @@
                   
                 </tbody>
               </table>
-            <script src="js/jsPDF/dist/jspdf.min.js"></script>
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+            <script src="../assets/html2pdf/index.js"></script>
+            <script src="../assets/materialize/js/materialize.min.js"></script>
             <script src="../js/generate-bill.js"></script>
             
 </body>
