--- a/html/index.html
+++ b/html/index.html
@@ -12,13 +12,13 @@
     />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
+      href="../assets/materialize/css/materialize.min.css"
     />
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../styles/read-file.css" />
+    <link rel="stylesheet" href="../styles/main.css" />
     <title>Invoice Billing</title>
   </head>
 
@@ -113,8 +113,7 @@
         </a>
       </div>
     </main>
-    <footer>Grand total</footer>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="../assets/materialize/js/materialize.min.js"></script>
     <script src="../js/index.js"></script>
   </body>
 </html>
