--- a/html/search-parts.html
+++ b/html/search-parts.html
@@ -12,9 +12,9 @@
     />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
+      href="../assets/materialize/css/materialize.min.css"
     />
-    <link rel="stylesheet" href="../styles/read-file.css" />
+    <link rel="stylesheet" href="../styles/main.css" />
     <title>Search Parts</title>
   </head>
 
@@ -39,7 +39,7 @@
         </button>
       </section>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="../assets/materialize/js/materialize.min.js"></script>
     <script src="../js/search-renderer.js"></script>
   </body>
 </html>
