--- a/html/generate-bill.html
+++ b/html/generate-bill.html
@@ -33,6 +33,7 @@
                   
                 </tbody>
               </table>
+        </div>
             <script src="../assets/html2pdf/index.js"></script>
             <script src="../assets/materialize/js/materialize.min.js"></script>
             <script src="../js/generate-bill.js"></script>
