--- a/html/index.html
+++ b/html/index.html
@@ -38,7 +38,7 @@
         </div>
 
         <div class="row">
-          <form class="col s12">
+          <form class="col s12" id="parts-form">
             <div class="row">
               <div class="input-field col s4">
                 <input
@@ -93,28 +93,64 @@
             </div>
           </form>
         </div>
-        <table id="billing-totals" class="striped hidden">
-          <thead>
-            <tr>
-              <th>Material</th>
-              <th>HSN Code</th>
-              <th>Qty</th>
-              <th>MRP(in &#8377;)</th>
-              <th>Total (in &#8377;)</th>
-              <th>Actions</th>
-            </tr>
-          </thead>
+        <div id="bill-details-container" class="hidden">
+          <table id="billing-totals" class="striped">
+            <thead>
+              <tr>
+                <th>Material</th>
+                <th>HSN Code</th>
+                <th>Qty</th>
+                <th>MRP(in &#8377;)</th>
+                <th>Total (in &#8377;)</th>
+                <th>Actions</th>
+              </tr>
+            </thead>
 
-          <tbody></tbody>
-        </table>
-        <span class="grand-total-final hidden" id="grand-total-container">
-          <p>Grand Total</p>
-          <p id="grand-total"></p>
-        </span>
-        <a class="waves-effect waves-light btn disabled" id="generate-bill-btn">
-          <i class="large material-icons left">search</i>
-          Generate Bill
-        </a>
+            <tbody></tbody>
+          </table>
+          <!-- discount -->
+          <div id="additional-discount-container">
+            <form class="col s12" id="discount-form">
+              <div class="row">
+                <div class="input-field col s6">
+                  <input id="discount-rupees" type="number" class="validate" />
+                  <label for="discount-rupees" id="discount-rupees-label">
+                    discount (&#8377;)
+                  </label>
+                </div>
+                <div class="input-field col s6">
+                  <input id="discount-percent" type="number" class="validate" />
+                  <label for="discount-percent" id="discount-percent-label">
+                    discount (%)
+                  </label>
+                </div>
+                <div class="input-field col s4">
+                  <button
+                    class="btn waves-effect waves-light"
+                    type="submit"
+                    name="action"
+                  >
+                    <i class="material-icons right">remove</i>
+                    Discount
+                  </button>
+                </div>
+              </div>
+            </form>
+          </div>
+          <!-- grand total -->
+          <span class="grand-total-final" id="grand-total-container">
+            <p>Grand Total</p>
+            <p id="grand-total"></p>
+          </span>
+          <!-- bill button -->
+          <a
+            class="waves-effect waves-light btn disabled"
+            id="generate-bill-btn"
+          >
+            <i class="large material-icons left">search</i>
+            Generate Bill
+          </a>
+        </div>
       </div>
     </main>
     <script src="../assets/materialize/js/materialize.min.js"></script>
